[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Laser.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LaserController.gd" type="Script" id=2]
[ext_resource path="res://Assets/LaserExplosion.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Laser1FireSound.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Laser1ExplosionSound.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Explosion",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]

[node name="Laser" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 10, 10 )
frames = SubResource( 3 )
animation = "Explosion"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="AudioStream2DLaser" type="AudioStreamPlayer2D" parent="."]
pause_mode = 1
stream = ExtResource( 4 )
bus = "GameSounds"

[node name="AudioStream2DLaserExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "GameSounds"

[node name="cooldownTimerLaserDestroyed" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
